--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <link rel="stylesheet" href="./css/bootstrap.min.css" />
       <!--? ===============  Main Css File =============== -->
       <link rel="stylesheet" href="./css/style.css" />
+      <script src="./js/inter.js"></script>
    </head>
    <body>
       <!-- ========== Start Fixed ========== -->
