--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
 
                         <div class="col-12">
-                           <button type="submit" class="btn w-100 main-btn" id="btnLogin">LogIn</button>
+                           <button type="submit" class="btn w-100 main-btn" disabled id="btnLogin">LogIn</button>
                            <p id="msg" class="text-center"></p>
                         </div>
                      </form>
