--- a/register.html
+++ b/register.html
@@ -84,7 +84,7 @@
                            </div>
                         </div>
                         <div class="col-12">
-                           <button type="submit" class="btn w-100 main-btn" id="btnRegister">Register</button>
+                           <button type="submit" class="btn w-100 main-btn" disabled id="btnRegister">Register</button>
                            <p id="msg" class="text-center"></p>
                         </div>
                      </form>
